# Akin

./: .gitignore  .travis.yml  404.html  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py
akin/: __init__.py  _data_structures.py  lsh.py  minhash.py
api/api_ref/: index.html
docs/: api_documentation.md  getting_started.md  index.md
docs/api/: api_ref.md
example/: usage_example.ipynb
getting_started/: index.html
notebooks/: api_documentation.md
search/: search_index.json
tests/: test_data_structures.py  test_lsh.py  test_minhash.py
